Create a general notification and success notification style based on GDS error messages
- wrap all notification types in .grid-row and .column-two-thirds class
so text lines aren't long
- Edit order of notifications so that success mesages appear before
general notifications
- Fixed FAA Account Locked page html

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Index.cshtml
@@ -14,9 +14,22 @@
     const string deleteMessage = "You've successfully removed the <a id='vacancyDeletedLink' href={0}>{1}</a> apprenticeship";
     var deletedMessageWithLink = string.Format(deleteMessage, Url.RouteUrl(CandidateRouteNames.ApprenticeshipDetails, new { id = Model.DeletedVacancyId }), Model.DeletedVacancyTitle);
      
-    <div role="alert" aria-live="assertive" class="panel-info">
-        <p id="VacancyDeletedInfoMessageText">@Html.Raw(deletedMessageWithLink)</p>
+    <div class="grid-row">
+        <div class="column-two-thirds">
+            <div class="info-summary" role="group" aria-labelledby="info-summary-heading-example-2" tabindex="-1">
+                <!--<h1 class="heading-medium info-summary-heading" id="info-summary-heading-example-2">
+                    Message to alert the user to a problem goes here
+                </h1>-->
+
+                <p id="VacancyDeletedInfoMessageText">@Html.Raw(deletedMessageWithLink)</p>
+
+                <!--<ul class="info-summary-list">
+                    <li><a href="#">Descriptive link to the question with an error</a></li>
+                </ul>-->
+            </div>
+        </div>
     </div>
+
 }
 
 @if (Model.TraineeshipFeature.ShowTraineeshipsPrompt)
