--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Terms.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Terms.cshtml
@@ -4,8 +4,20 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div role="alert" class="panel-info">
-    <p id="InfoMessageText">To use this service you must accept our updated terms and conditions</p>
+<div class="grid-row">
+    <div class="column-two-thirds">
+        <div class="info-summary" role="group" aria-labelledby="info-summary-heading-example-2" tabindex="-1">
+            <!--<h1 class="heading-medium info-summary-heading" id="info-summary-heading-example-2">
+                Message to alert the user to a problem goes here
+            </h1>-->
+
+            <p id="InfoMessageText">To use this service you must accept our updated terms and conditions</p>
+
+            <!--<ul class="info-summary-list">
+                <li><a href="#">Descriptive link to the question with an error</a></li>
+            </ul>-->
+        </div>
+    </div>
 </div>
 
 <div class="hgroup">
