--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
@@ -26,17 +26,30 @@
         var decision = Model.Status == ApplicationStatuses.Successful ? "successful" : "unsuccessful";
         var decisionDateTime = Model.Status == ApplicationStatuses.Successful ? Model.SuccessfulDateTime : Model.UnsuccessfulDateTime;
 
-        <div role="alert" class="panel-info">
-            <p>
-                <i class="fa fa-flag the-icon"></i>This candidate was made @decision
-                @if (decisionDateTime.HasValue)
-                {
-                    <span>on @Html.DisplayFor(m => decisionDateTime.Value)</span>
-                }
-            </p>
-            <p>
-                @Html.RouteLink("Return to vacancy applications", RecruitmentRouteNames.VacancyApplications, new { Model.Vacancy.VacancyReferenceNumber })
-            </p>
+
+        <div class="grid-row">
+            <div class="column-two-thirds">
+                <div class="info-summary" role="group" aria-labelledby="info-summary-heading-example-2" tabindex="-1">
+                    <!--<h1 class="heading-medium info-summary-heading" id="info-summary-heading-example-2">
+                        Message to alert the user to a problem goes here
+                    </h1>-->
+
+                    <p>
+                        This candidate was made @decision
+                        @if (decisionDateTime.HasValue)
+                        {
+                            <span>on @Html.DisplayFor(m => decisionDateTime.Value)</span>
+                        }
+                    </p>
+                    <p>
+                        @Html.RouteLink("Return to vacancy applications", RecruitmentRouteNames.VacancyApplications, new { Model.Vacancy.VacancyReferenceNumber })
+                    </p>
+
+                    <!--<ul class="info-summary-list">
+                        <li><a href="#">Descriptive link to the question with an error</a></li>
+                    </ul>-->
+                </div>
+            </div>
         </div>
     }
     <div class="grid-row hgroup">
