--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
@@ -130,55 +130,91 @@
     <div id="global-header-bar"></div>
     <div id="content" role="main" tabindex="-1">
         <main id="main">
-            <div class="phase-banner sfa-navigation-wrapper">
-                <div class="grid-row">
-                    <div class="column-one-half">
-                        <p>
-                            <strong class="phase-tag">BETA</strong>
-                            <span>This is a new service - your <a href="https://www.surveymonkey.co.uk/r/LB5ZJRM" target="_blank">feedback</a> helps improve it.</span>
-                        </p>
-                    </div>
-                    <div class="column-one-half sfa-navigation">
-                        @Html.Partial("_LoginPartial")
-                    </div>
+        <div class="phase-banner sfa-navigation-wrapper">
+            <div class="grid-row">
+                <div class="column-one-half">
+                    <p>
+                        <strong class="phase-tag">BETA</strong>
+                        <span>This is a new service - your <a href="https://www.surveymonkey.co.uk/r/LB5ZJRM" target="_blank">feedback</a> helps improve it.</span>
+                    </p>
+                </div>
+                <div class="column-one-half sfa-navigation">
+                    @Html.Partial("_LoginPartial")
                 </div>
             </div>
-            @{
-                var controller = ViewContext.Controller as SFA.Apprenticeships.Web.Common.Controllers.ControllerBase;
+        </div>
+                @{
+                    var controller = ViewContext.Controller as SFA.Apprenticeships.Web.Common.Controllers.ControllerBase;
 
-                if (controller != null)
-                {
-                    var infoMessage = controller.UserData.Pop(UserMessageConstants.InfoMessage);
-                    var successMessage = controller.UserData.Pop(UserMessageConstants.SuccessMessage);
-                    var warningMessage = controller.UserData.Pop(UserMessageConstants.WarningMessage);
-                    var errorMessage = controller.UserData.Pop(UserMessageConstants.ErrorMessage);
+                    if (controller != null)
+                    {
+                        var infoMessage = controller.UserData.Pop(UserMessageConstants.InfoMessage);
+                        var successMessage = controller.UserData.Pop(UserMessageConstants.SuccessMessage);
+                        var warningMessage = controller.UserData.Pop(UserMessageConstants.WarningMessage);
+                        var errorMessage = controller.UserData.Pop(UserMessageConstants.ErrorMessage);
 
-                    if (infoMessage != null)
-                    {
-                        <div role="alert" class="panel-info">
-                            <p id="InfoMessageText">@Html.Raw(infoMessage)</p>
-                        </div>
-                    }
-                    if (successMessage != null)
-                    {
-                        <div role="alert" class="panel-success">
-                            <p id="SuccessMessageText"><i class="fa fa-check"></i>@Html.Raw(successMessage)</p>
-                        </div>
-                    }
-                    if (warningMessage != null)
-                    {
-                        <div role="alert" class="panel-warning">
-                            <p id="WarningMessageText">@Html.Raw(warningMessage)</p>
-                        </div>
-                    }
-                    if (errorMessage != null)
-                    {
-                        <div role="alert" class="panel-danger">
-                            <p id="ErrorMessageText">@Html.Raw(errorMessage)</p>
-                        </div>
+                        if (errorMessage != null)
+                        {
+                            <div role="alert" class="panel-danger">
+                                <p id="ErrorMessageText">@Html.Raw(errorMessage)</p>
+                            </div>
+                        }
+                        if (warningMessage != null)
+                        {
+                            <div class="grid-row">
+                                <div class="column-two-thirds">
+                                    <div class="warning-summary" role="group" aria-labelledby="warning-summary-heading-example-2" tabindex="-1">
+                                        <!--<h1 class="heading-medium warning-summary-heading" id="warning-summary-heading-example-2">
+                                    Message to alert the user to a problem goes here
+                                </h1>-->
+
+                                        <p id="WarningMessageText">@Html.Raw(warningMessage)</p>
+
+                                        <!--<ul class="warning-summary-list">
+                                    <li><a href="#">Descriptive link to the question with an error</a></li>
+                                </ul>-->
+                                    </div>
+                                </div>
+                            </div>
+                        }
+                        if (successMessage != null)
+                        {
+                            <div class="grid-row">
+                                <div class="column-two-thirds">
+                                    <div class="success-summary" role="group" aria-labelledby="success-summary-heading-example-2" tabindex="-1">
+                                        <!--<h1 class="heading-medium success-summary-heading" id="success-summary-heading-example-2">
+                                    Message to alert the user to a problem goes here
+                                </h1>-->
+
+                                        <p id="SuccessMessageText">@Html.Raw(successMessage)</p>
+
+                                        <!--<ul class="success-summary-list">
+                                    <li><a href="#">Descriptive link to the question with an error</a></li>
+                                </ul>-->
+                                    </div>
+                                </div>
+                            </div>
+                        }
+                        if (infoMessage != null)
+                        {
+                            <div class="grid-row">
+                                <div class="column-two-thirds">
+                                    <div class="info-summary" role="group" aria-labelledby="info-summary-heading-example-2" tabindex="-1">
+                                        <!--<h1 class="heading-medium info-summary-heading" id="info-summary-heading-example-2">
+                                    Message to alert the user to a problem goes here
+                                </h1>-->
+
+                                        <p id="InfoMessageText">@Html.Raw(infoMessage)</p>
+
+                                        <!--<ul class="info-summary-list">
+                                    <li><a href="#">Descriptive link to the question with an error</a></li>
+                                </ul>-->
+                                    </div>
+                                </div>
+                            </div>
+                        }
                     }
                 }
-            }
             @RenderBody()
         </main>
 
