--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
@@ -29,12 +29,9 @@
 
         <div class="grid-row">
             <div class="column-two-thirds">
-                <div class="info-summary" role="group" aria-labelledby="info-summary-heading-example-2" tabindex="-1">
-                    <!--<h1 class="heading-medium info-summary-heading" id="info-summary-heading-example-2">
-                        Message to alert the user to a problem goes here
-                    </h1>-->
+                <div class="info-summary" role="group" aria-labelledby="info-summary" tabindex="-1">
 
-                    <p>
+                    <p id="info-summary">
                         This candidate was made @decision
                         @if (decisionDateTime.HasValue)
                         {
@@ -44,10 +41,6 @@
                     <p>
                         @Html.RouteLink("Return to vacancy applications", RecruitmentRouteNames.VacancyApplications, new { Model.Vacancy.VacancyReferenceNumber })
                     </p>
-
-                    <!--<ul class="info-summary-list">
-                        <li><a href="#">Descriptive link to the question with an error</a></li>
-                    </ul>-->
                 </div>
             </div>
         </div>
