--- a/src/SFA.Apprenticeships.Web.Recruit/Views/TraineeshipApplication/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/TraineeshipApplication/Review.cshtml
@@ -27,12 +27,9 @@
 
         <div class="grid-row">
             <div class="column-two-thirds">
-                <div class="info-summary" role="group" aria-labelledby="info-summary-heading-example-2" tabindex="-1">
-                    <!--<h1 class="heading-medium info-summary-heading" id="info-summary-heading-example-2">
-                        Message to alert the user to a problem goes here
-                    </h1>-->
+                <div class="info-summary" role="group" aria-labelledby="info-summar" tabindex="-1">
 
-                    <p>
+                    <p id="info-summary">
                         This candidate was made @decision
                         @if (decisionDateTime.HasValue)
                         {
@@ -43,9 +40,6 @@
                         @Html.RouteLink("Return to opportunity applications", RecruitmentRouteNames.VacancyApplications, new { Model.Vacancy.VacancyReferenceNumber })
                     </p>
 
-                    <!--<ul class="info-summary-list">
-                        <li><a href="#">Descriptive link to the question with an error</a></li>
-                    </ul>-->
                 </div>
             </div>
         </div>
